feat: updated docs
